# Wardrobe-App

./: .gitignore  LICENSE.md  README.md
app/: Cargo.toml  inventory.json  outfits.json
app/src/: main.rs
