[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.25", features = ["jpeg", "png"] }
ollama-rs = "0.3.5"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.150"
